--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/home/home.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/home/home.component.html
@@ -50,14 +50,17 @@
                                     <div class="col-md-1 col-sm-6 col-2">
                                         <span class="ms-2">Id</span>
                                     </div>
-                                    <div class="col-md-5 col-sm-6 col-4">
+                                    <div class="col-md-3 col-sm-6 col-4">
                                         <span class="ms-2">Nombre comercial</span>
                                     </div>
                                     <div class="col-md-2 col-sm-6 col-4">
                                         <span class="ms-2">Costo indirecto</span>
                                     </div>
                                     <div class="col-md-2 col-sm-6 col-3">
-                                        <span class="ms-2">Utilidad %</span>
+                                        <span class="ms-2">Utilidad(%) </span>
+                                    </div>
+                                    <div class="col-md-2 col-sm-6 col-3">
+                                        <span class="ms-2">Utilidad</span>
                                     </div>
                                     <div class="col-md-2 col-sm-6 col-3">
                                         <span class="ms-2">Total</span>
@@ -73,7 +76,7 @@
                                     <div class="col-md-1 col-sm-6 col-2">
                                         <div class="ms-2">{{ c.idCotizacion }}</div>
                                     </div>
-                                    <div class="col-md-5 col-sm-6 col-4">
+                                    <div class="col-md-3 col-sm-6 col-4">
                                         <div class="ms-2">{{ c.nombreComercial }}</div>
                                         <small *ngIf="c.idServicio == 1" class="ms-2 text-muted">Servicio: Mantenimiento</small>
                                         <small *ngIf="c.idServicio == 2" class="ms-2 text-muted">Servicio: Limpieza</small>
@@ -84,7 +87,10 @@
                                         <div class="ms-2">${{ c.subTotal + c.indirecto | number: '1.2-2' }}</div>
                                     </div>
                                     <div class="col-md-2 col-sm-6 col-3">
-                                        <div class="ms-2">{{ c.utilidadPor }}%</div>
+                                        <div class="ms-2">{{ c.utilidadPor }} %</div>
+                                    </div>
+                                    <div class="col-md-2 col-sm-6 col-3">
+                                        <div class="ms-2">${{ c.utilidad  | number: '1.2-2' }}</div>
                                     </div>
                                     <div class="col-md-2 col-sm-6 col-3">
                                         <div class="ms-2">${{  c.subTotal + c.indirecto + c.utilidad | number: '1.2-2' }}</div>
@@ -99,22 +105,39 @@
     </div>
     <div class="row pt-1 mb-3">
         <div>
-            <h6 class="h6">Reporte de prospectos</h6>
+            <h6 class="h6">Reporte de cotizaciones</h6>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-3 col-3 mb-3">
-            <div class="form-floating">
-                <select class="form-select" [(ngModel)]="idEstatus" aria-label="IdEstatusProspecto" id="ddlEstatusProspecto">
-                    <option value="0">Seleccione ...</option>
-                    <option *ngFor="let s of lests" [ngValue]="s.id">{{ s.nom }}</option>
-                </select>
-                <label for="ddlEstatusProspecto">Estatus:</label>
+            <div class="col-md-2 col-6 mb-3">
+                <div class="form-floating">
+                    <select class="form-select" [(ngModel)]="idEstatus" aria-label="IdEstatusProspecto" id="ddlEstatusProspecto">
+                        <option value="0">Seleccione ...</option>
+                        <option *ngFor="let s of lests" [ngValue]="s.id">{{ s.nom }}</option>
+                    </select>
+                    <label for="ddlEstatusProspecto">Estatus:</label>
+                </div>
             </div>
-        </div>
-        <div class="col-md-3 col-3 mb-3">
-            <button class="btn btn-outline-info" (click)="descargarReporteProspectos()"><i class="fa fa-solid fa-file-download"></i> Descargar</button>
-        </div>
+            <div class="col-sm-12 col-md-3 col-6 mb-3">
+                <div class="form-floating">
+                    <input type="date" class="form-control" [(ngModel)]="Finicio" id="txtFinicio">
+                    <label for="txtFinicio">Fecha inicial</label>
+                </div>
+                <span *ngIf="ferr('Finicio')" class="text-danger">{{ terr('Finicio') }}</span>
+            </div>
+            <div class="col-sm-12 col-md-3 col-6 mb-3">
+                <div class="form-floating">
+                    <input type="date" class="form-control" [(ngModel)]="Ffin" id="txtFfin">
+                    <label for="txtFfin">Fecha final</label>
+                </div>
+                <span *ngIf="ferr('Ffin')" class="text-danger">{{ terr('Ffin') }}</span>
+            </div>
+            <!--<div class="col-md-2 col-2 mb-3">
+                <button class="btn btn-outline-info" (click)="descargarReporteProspectos('Word')"><i class="fa fa-solid fa-file-download"></i> Docx</button>
+            </div>-->
+            <div class="col-md-2 col-6 mb-3 text-center">
+                <button class="btn btn-outline-info" (click)="descargarReporteProspectos('Excel')"><i class="fa fa-solid fa-file-excel"></i> Descargar</button>
+            </div>
     </div>
 </div>
 <toast-widget></toast-widget>
