--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/catalogo/catalogo.component.html
@@ -35,7 +35,7 @@
                         </li>
                     </ul>
                     <div class="tab-content pt-2" id="tabcontent">
-                        <div class="tab-pane fade show active text-center " style="border-radius: 10px; overflow-x: hidden; " id="porcentajespred" role="tabpanel" aria-labelledby="tabulador-tab">
+                        <div class="tab-pane fade show active text-center" id="porcentajespred" role="tabpanel" aria-labelledby="tabulador-tab">
                             <div class="row pb-2">
                                 <div class="col-sm-3 col-6 pb-3">
                                     <span class="badge">Costo Indirecto (%):</span>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="tab-content pt-2" id="tabcontent">
-                        <div class="tab-pane fade text-center " style="border-radius: 10px; overflow-x: hidden; " id="IMSS" role="tabpanel" aria-labelledby="IMSS-tab">
+                        <div class="tab-pane fade text-center " id="IMSS" role="tabpanel" aria-labelledby="IMSS-tab">
                             <div class="row pb-2">
 
                                 <div>
@@ -177,8 +177,8 @@
                         </li>
                     </ul>
                     <div class="tab-content pt-2" id="tabcontent">
-                        <div class="tab-pane fade show active text-center" style="border-radius: 10px; overflow-x: hidden;" id="servicio" role="tabpanel" aria-labelledby="material-tab">
-                            <div *ngIf="sers && sers.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 300px; overflow-y: auto;" class="fade-in-container">
+                        <div class="tab-pane fade show active text-center" id="servicio" role="tabpanel" aria-labelledby="material-tab">
+                            <div *ngIf="sers && sers.length > 0" class="table-container fade-in-container">
                                 <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
@@ -264,8 +264,8 @@
                         </li>
                     </ul>
                     <div class="tab-content pt-2" id="tabcontent">
-                        <div class="tab-pane fade show active" style="border-radius: 10px; overflow-x: hidden;" id="material" role="tabpanel" aria-labelledby="material-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                        <div class="tab-pane fade show active" id="material" role="tabpanel" aria-labelledby="material-tab">
+                            <div *ngIf="mates && mates.length > 0" class="table-container fade-in-container">
                                 <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
@@ -298,8 +298,8 @@
                             </div>
                             <br>
                         </div>
-                        <div class="tab-pane fade" style="border-radius: 10px; overflow-x: hidden;" id="uniforme" role="tabpanel" aria-labelledby="uniforme-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                        <div class="tab-pane fade" id="uniforme" role="tabpanel" aria-labelledby="uniforme-tab">
+                            <div *ngIf="mates && mates.length > 0" class="table-container fade-in-container">
                                 <table class="table table-borderless table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
@@ -332,8 +332,8 @@
                             </div>
                             <br>
                         </div>
-                        <div class="tab-pane fade" style="border-radius: 10px; overflow-x: hidden;" id="equipo" role="tabpanel" aria-labelledby="equipo-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                        <div class="tab-pane fade" id="equipo" role="tabpanel" aria-labelledby="equipo-tab">
+                            <div *ngIf="mates && mates.length > 0" class="table-container fade-in-container">
                                 <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
                                         <tr>
@@ -366,8 +366,8 @@
                             </div>
                             <br>
                         </div>
-                        <div class="tab-pane fade" style="border-radius: 10px; overflow-x: hidden;" id="herramienta" role="tabpanel" aria-labelledby="herramienta-tab">
-                            <div *ngIf="mates && mates.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                        <div class="tab-pane fade" id="herramienta" role="tabpanel" aria-labelledby="herramienta-tab">
+                            <div *ngIf="mates && mates.length > 0" class="table-container fade-in-container">
 
                                 <table class="table table-striped table-responsive">
                                     <thead class="sticky-top">
@@ -401,8 +401,7 @@
                             </div>
                             <br>
                         </div>
-
-                        <div class="tab-pane fade" style="border-radius: 10px; overflow-x: hidden; " id="tabulador" role="tabpanel" aria-labelledby="tabulador-tab">
+                        <div class="tab-pane fade" id="tabulador" role="tabpanel" aria-labelledby="tabulador-tab">
                             <table class="table table-borderless table-responsive">
                                 <tbody>
                                     <tr>
@@ -463,7 +462,7 @@
             </h1>
             <div id="collapseUsuario" class="accordion-collapse collapse" aria-labelledby="headingUsuario">
                 <div class="accordion-body">
-                    <div *ngIf="lusu && lusu.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
+                    <div *ngIf="lusu && lusu.length > 0" class="table-container fade-in-container">
                         <table class="table table-striped table-responsive">
                             <thead class="sticky-top">
                                 <tr class="d-md-none">
@@ -581,8 +580,8 @@
                     <div *ngIf="isLoading" class="text-center ">
                         <i class="fas fa-spinner fa-spin fa-3x"></i>
                     </div>
-                    <div *ngIf="model.productos && model.productos.length > 0" class="fade-in-container" style="max-height: 300px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
-                        <table class="table table-striped table-responsive" style="border-radius: 10px; overflow-x: hidden;">
+                    <div *ngIf="model.productos && model.productos.length > 0" class="table-container fade-in-container">
+                        <table class="table table-striped table-responsive">
                             <thead class="sticky-top">
                                 <tr class="d-md-none">
                                     <th class="ps-2 text-start">Productos</th>
