--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
@@ -52,7 +52,7 @@
     <div *ngIf="isLoading" class="text-center ">
         <i class="fas fa-spinner fa-spin fa-3x"></i>
     </div>
-    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 500px; overflow-y: auto;" class="box-shadow fade-in-container">
+    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="table-container box-shadow fade-in-container">
         <table class="table table-striped table-responsive">
             <thead class="sticky-top">
                 <tr class="d-md-none">
@@ -94,13 +94,13 @@
                                 <span class="badge d-md-none">Id:</span>
                                 <div class="ms-2">{{ cot.idCotizacion }}</div>
                             </div>
-                            <div [ngClass]="user.idAutoriza ? 'col-md-3 col-sm-6 col-5' : 'col-md-5 col-sm-12 col-10'">
+                            <div [ngClass]="user.idAutoriza ? 'col-md-3 col-sm-6 col-10' : 'col-md-5 col-sm-12 col-10'">
                                 <span class="badge d-md-none">Prospecto:</span>
                                 <div class="ms-2">{{ cot.nombreComercial }}</div>
                                 <small class="ms-2 text-muted">Servicio: {{ cot.servicio }}</small>
                             </div>
 
-                            <div class="col-md-2 col-sm-6 col-3 ">
+                            <div class="col-md-2 col-sm-6 col-4 ">
                                 <span class="badge d-md-none">Total:</span>
                                 <div class="ms-2">${{cot.total | number: '1.2'}}</div>
                             </div>
@@ -108,11 +108,11 @@
                                 <span class="badge d-md-none">Fecha Alta:</span>
                                 <div class="ms-2">{{ cot.fechaAlta | date: 'dd-MM-yyyy' }}</div>
                             </div>
-                            <div class="col-md-2 col-sm-6 col-5">
+                            <div class="col-md-2 col-sm-6 col-4">
                                 <span class="badge d-md-none">Vigencia:</span>
                                 <div class="ms-2 ">{{ cot.diasVigencia }} Dias</div>
                             </div>
-                            <div *ngIf="user.idAutoriza === 1" class="col-md-2 col-sm-6 col-5">
+                            <div *ngIf="user.idAutoriza === 1" class="col-md-2 col-sm-6 col-12">
                                 <span class="badge d-md-none">Usuario Alta:</span>
                                 <div class="ms-2 small"> {{  cot.idAlta }}  </div>
                             </div>
