--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
@@ -495,7 +495,7 @@
             <div *ngIf="isLoading" class="text-center ">
                 <i class="fas fa-spinner fa-spin fa-3x"></i>
             </div>
-            <div *ngIf="lsdir.direcciones && lsdir.direcciones.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 400px; overflow-y: auto; overflow-x: hidden" >
+            <div *ngIf="lsdir.direcciones && lsdir.direcciones.length > 0"class="table-container">
                 <div class="row">
                     <div *ngFor="let dr of lsdir.direcciones" class="col-sm-12 col-md-6 mb-3">
                         <div class="card shadow-sm">
@@ -562,7 +562,7 @@
                     <h5><i class="bi bi-people-fill"></i><span class="badge plantilla text-white">No. Empleados: {{lspue.empleados}}  </span></h5>
                 </div>
             </div>
-            <div style="border-radius: 10px; overflow-x: hidden;max-height: 500px; overflow-y: auto; overflow-x: hidden" class="box-shadow">
+            <div class="table-container box-shadow">
                 <div id="accordion" *ngFor="let dir of lspue.direccionesCotizacion" [ngClass]="{'open': allTabsOpen}" (click)="quitarFocoDeElementos2()">
                     <div class="plantilla shadow-sm">
                         <div class="row col-md-12 col-sm-12 col-12 shadow-sm">
@@ -745,8 +745,8 @@
             <div *ngIf="isLoading" class="text-center ">
                 <i class="fas fa-spinner fa-spin fa-3x"></i>
             </div>
-            <div *ngIf="lsmat.materialesCotizacion && lsmat.materialesCotizacion.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 500px; overflow-y: auto;" class="box-shadow fade-in-container">
-                <table class="table  table-striped table-responsive">
+            <div *ngIf="lsmat.materialesCotizacion && lsmat.materialesCotizacion.length > 0" class="table-container box-shadow fade-in-container">
+                <table class="table table-striped table-responsive">
                     <thead class="sticky-top">
                         <tr class="d-md-none">
                             <th class="ps-2">Lista de productos</th>
@@ -855,7 +855,7 @@
 
             <ng-container *ngIf="isGen == 1">
                 <h6>General</h6>
-                <div class="row" style="border-radius: 10px; overflow-x: hidden;">
+                <div class="table-container">
                     <table class="table table-borderless table-striped table-responsive">
                         <thead class="sticky-top">
                             <tr class="d-md-none">
@@ -937,7 +937,7 @@
 
             <ng-container *ngIf="isSuc == 1">
                 <h6>Por directorio</h6>
-                <div class="row" style="border-radius: 10px; overflow-x: hidden;">
+                <div class="table-container">
                     <table class="table table-borderless table-striped table-responsive">
                         <thead class="sticky-top">
                             <tr class="d-md-none">
