--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
@@ -30,17 +30,10 @@
         </div>
     </div>
     <div *ngIf="isLoading || (lspro.prospectos && lspro.prospectos.length === 0)" class="row-12 text-center">
-        <hr />
-        <br />
-        <h6 *ngIf="isLoading">Cargando...</h6>
+        <hr *ngIf="!isLoading && lspro.prospectos && lspro.prospectos.length === 0" />
         <h6 *ngIf="!isLoading && lspro.prospectos && lspro.prospectos.length === 0">No se encontraron registros</h6>
     </div>
-    <div *ngIf="isLoading" class="text-center ">
-        <i class="fas fa-spinner fa-spin fa-3x"></i>
-    </div>
-    <br />
-    <br />
-    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" style="border-radius: 10px; overflow-x: hidden;max-height: 500px; overflow-y: auto; overflow-x: hidden" class="box-shadow fade-in-container">
+    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class=" table-container box-shadow fade-in-container" #tbprospectos>
         <table class="table table-striped table-responsive">
             <thead class="sticky-top">
                 <tr>
@@ -98,9 +91,13 @@
         </table>
     </div>
     <br />
-    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class="fade-in-container">
+    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class="fade-in-container"  [style.pointer-events]="isLoading ? 'none' : 'auto'">
         <pagina-widget [pagina]="lspro.pagina" [numPaginas]="lspro.numPaginas" [rows]="lspro.rows" (chgEvent)="muevePagina($event)"></pagina-widget>
     </div>
+    <div class="row-12 text-center">
+        <h6 *ngIf="isLoading">Cargando...</h6>
+    </div>
+
 </div>
 <elimina-widget [titulo]="" [mensaje]="" (ansEvent)="desactivar()"></elimina-widget>
 <toast-widget></toast-widget>
