--- a/SistemaVentasBatia/ClientApp/src/app/widgets/material/material.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/material/material.widget.html
@@ -13,8 +13,7 @@
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <div *ngIf="model.materialesCotizacion && model.materialesCotizacion.length > 0" class="fade-in-container shadow-sm" style="max-height: 350px; border-radius: 10px; overflow-y: auto; overflow-x: hidden;">
-
+                    <div *ngIf="model.materialesCotizacion && model.materialesCotizacion.length > 0"  class="table-container fade-in-container shadow-sm">
                         <table class="table table-striped table-responsive">
                             <thead class="sticky-top">
                                 <tr class="d-md-none">
