--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/cotizacion.component.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="isLoading || (lcots.cotizaciones && lcots.cotizaciones.length === 0)" class="row-12 text-center">
+    <!--<div *ngIf="isLoading || (lcots.cotizaciones && lcots.cotizaciones.length === 0)" class="row-12 text-center">
         <hr />
         <br />
         <br />
@@ -51,8 +51,8 @@
     </div>
     <div *ngIf="isLoading" class="text-center ">
         <i class="fas fa-spinner fa-spin fa-3x"></i>
-    </div>
-    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="table-container box-shadow fade-in-container">
+    </div>-->
+    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="table-container box-shadow fade-in-container" #tbcotizaciones>
         <table class="table table-striped table-responsive">
             <thead class="sticky-top">
                 <tr class="d-md-none">
@@ -130,10 +130,11 @@
         </table>
     </div>
     <br />
-    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="fade-in-container">
+    <div *ngIf="lcots.cotizaciones && lcots.cotizaciones.length > 0" class="fade-in-container" [style.pointer-events]="isLoading ? 'none' : 'auto'">
         <pagina-widget [pagina]="lcots.pagina" [numPaginas]="lcots.numPaginas" [rows]="lcots.rows" (chgEvent)="muevePagina($event)"></pagina-widget>
     </div>
 </div>
+<carga-widget></carga-widget>
 <toast-widget></toast-widget>
 <editcot-widget (editCot)="editReturn($event)"></editcot-widget>
 <confirmacion-widget (confirmaEvent)="confirmacionEvent($event)"></confirmacion-widget>
