--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
@@ -29,9 +29,9 @@
             </div>
         </div>
     </div>
-    <div *ngIf="isLoading || (lspro.prospectos && lspro.prospectos.length === 0)" class="row-12 text-center">
-        <hr *ngIf="!isLoading && lspro.prospectos && lspro.prospectos.length === 0" />
-        <h6 *ngIf="!isLoading && lspro.prospectos && lspro.prospectos.length === 0">No se encontraron registros</h6>
+    <div *ngIf="lspro.prospectos == null && lspro.prospectos.length == 0 && isLoading == false" class="row text-center">
+        <hr/>
+        <h6>No se encontraron registros</h6>
     </div>
     <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class=" table-container box-shadow fade-in-container" #tbprospectos>
         <table class="table table-striped table-responsive">
@@ -91,13 +91,10 @@
         </table>
     </div>
     <br />
-    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class="fade-in-container"  [style.pointer-events]="isLoading ? 'none' : 'auto'">
+    <div *ngIf="lspro.prospectos && lspro.prospectos.length > 0" class="fade-in-container" [style.pointer-events]="isLoading ? 'none' : 'auto'">
         <pagina-widget [pagina]="lspro.pagina" [numPaginas]="lspro.numPaginas" [rows]="lspro.rows" (chgEvent)="muevePagina($event)"></pagina-widget>
     </div>
-    <div class="row-12 text-center">
-        <h6 *ngIf="isLoading">Cargando...</h6>
-    </div>
-
 </div>
+<carga-widget></carga-widget>
 <elimina-widget [titulo]="" [mensaje]="" (ansEvent)="desactivar()"></elimina-widget>
 <toast-widget></toast-widget>
